--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<h2>Hello World2</h2>  
+<h2>Testisg</h2>  
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
