--- a/Syllabuss.html
+++ b/Syllabuss.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Here goes the Syllabuss of the course</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h3>From unit 1 to 12</h3>
+<ul>
+<li><a href="https://docs.python.org/3/tutorial">https://docs.python.org/3/tutorial</a></li>
+<li><a href="https://www.learnpython.org">https://www.learnpython.org</a></li>
+<li><a href="https://www.python.org/dev/peps/pep-0008">https://www.python.org/dev/peps/pep-0008/</a></li>
+</ul>
+<h3>Unit 13</h3>
+<ul>
+<li><a href="https://docs.anaconda.com/anaconda/navigator/tutorials">https://docs.anaconda.com/anaconda/navigator/tutorials/</a></li>
+<li><a href="https://docs.conda.io/projects/conda/en/latest/user-guide/getting-started.html">https://docs.conda.io/projects/conda/en/latest/user-guide/getting-started.html</a></li>
+<li><a href="https://pip.pypa.io/en/stable/quickstart">https://pip.pypa.io/en/stable/quickstart/</a></li>
+<li><a href="https://realpython.com/jupyter-notebook-introduction">https://realpython.com/jupyter-notebook-introduction/</a></li>
+</ul>
+<h3>Unit 14</h3>
+<ul>
+<li><a href="https://qiskit.org/textbook/preface.html">https://qiskit.org/textbook/preface.html</a></li>
+</ul>
+
+
+<h3>Unit 15</h3>
+<ul>
+<li><a href="https://github.com/microsoft/iqsharp">https://github.com/microsoft/iqsharp</a></li>
+</ul>
+<h3>Unit 16</h3>
+<ul>
+<li><a href="https://docs.ocean.dwavesys.com/en/latest/getting_started.html">https://github.com/microsoft/iqsharp</a></li>
+</ul>
 
 </body>
 </html>
